Fix: Text alignment for champion search centered

--- a/home.css
+++ b/home.css
@@ -1,7 +1,8 @@
 .parent {
   position: relative;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  text-align: center;
 }
 
 .header {
@@ -19,17 +20,23 @@
 .champion {
   position: absolute;
   color: white;
-  left: 50vw;
+  display: inline-block;
+  width: 10%;
+  left: 50%;
+  margin-left: -5%;
   text-align: center;
 }
 
 .champsearch {
   position: absolute;
-  top: 30%;
+  top: 150%;
+  height: 100%;
+  width: 100%;
+  text-align: center;
 }
 
 .champbox {
   position: absolute;
-  width: 90vw;
-  left: 4vw;
+  width: 90%;
+  left: 5%;
 }
